deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiritual-tracker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spiritual-tracker
  template:
    metadata:
      labels:
        app: spiritual-tracker
    spec:
      containers:
      - name: spiritual-tracker-app
        image: spiritual-tracker-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
