service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spiritual-tracker-service
spec:
  selector:
    app: spiritual-tracker
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 54905
