spiritual-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spiritual-tracker-service
spec:
  selector:
    app: spiritual-tracker
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32409
