ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: spiritual.health.tracker.app.ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spiritual-tracker-service
                port:
                  number: 8080
