spiritual-tracker-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "spiritual-health-tracker-app.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spiritual-tracker-service
                port:
                  number: 80
